# tiny-dnn-snn

./: CMakeLists.txt
cmake/Modules/: DownloadSYCLDNN.cmake.in  HandleSYCLDNN.cmake  sycldnn.patch
examples/: CMakeLists.txt
examples/backends/sycldnn/: CMakeLists.txt  test_sycldnn.cpp
examples/ssd_detection/: convert_models.py
test/: CMakeLists.txt  test_convolutional_layer.h  test_fully_connected_layer.h
tiny_dnn/core/: backend.h
tiny_dnn/core/kernels/: conv2d_op.h  conv2d_op_sycldnn.h  fully_connected_op.h  fully_connected_op_sycldnn.h
tiny_dnn/layers/: convolutional_layer.h
